# modular_cmake

./: README.md
project1/: CMakeLists.txt
project2/: CMakeLists.txt
